--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity"/>
         </activity>
+        <provider
+            android:authorities="@string/content_authority"
+            android:name=".data.MovieFavoriteProvider"
+            android:exported="false"
+            android:syncable="true"/>
     </application>
 
 </manifest>
